Make unadvanced controls hidden instead of display: none; to prevent lay-out from jumping around

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -306,7 +306,7 @@ button.float {
 }
 
 .unadvanced .controls {
-	display: none;
+	visibility: hidden;
 }
 
 /* Clock UI */
